--- a/my-app/src/Example_stildalf.css
+++ b/my-app/src/Example_stildalf.css
@@ -47,10 +47,11 @@
   padding: 10px;
 }
 
-.spreadsheetSim {
+table.spreadsheetSim {
   height: fit-content;
   width: fit-content;
-  border-spacing: 0px;
+  border-spacing: 0;
+  border-collapse: collapse;
   color: #999;
   border: 1px solid rgba(0, 0, 0, 0.12);
   border-radius: 4px;
@@ -59,6 +60,7 @@
 
 .spreadsheetSim td,th {
   border: 1px solid #e7e7e7;
+  padding: 0;
   min-width: 3em;
   max-width: 6em;
 }
@@ -69,6 +71,11 @@
 
 .spreadsheetSim th {
   background-color: #f5f5f5;
+}
+
+.spreadsheetSim .titleRow th {
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 /* .spreadsheetSim th.addButtons { */
@@ -83,11 +90,20 @@
   margin: 0 auto;
 }
 
+.delSheetButton {
+  width: 200px;
+  margin: 0 auto;
+  color: red;
+}
+
 .spreadsheetSim input {
   border: none;
   padding: 0;
   line-height: 1.6em;
   width: -webkit-fill-available;
+  /* height: 100%;
+  display: inline-block;
+  position: relative; */
 }
 
 .json {
